--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity">
+            android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,7 +37,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".LoginActivity">
+        </activity>
+        <activity
             android:name=".PickDataActivity">
+
         </activity>
         <activity
             android:name=".MainActivity"
