--- a/pdf417MobiCustomUISample/build.gradle
+++ b/pdf417MobiCustomUISample/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation 'org.apache.poi:poi:5.2.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.shawnlin:number-picker:2.4.6'
 
 }
