pick general data activity was changed number picker with slider

--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
             android:name=".LoginActivity">
         </activity>
         <activity
-            android:name=".PickDataActivity">
+            android:name=".PickDataActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
