--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:required="false" />
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="false"></uses-feature>
+        android:required="false" />
 
     <application
         android:name=".CustomUIDemoApp"
@@ -29,16 +29,25 @@
         android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity">
+            android:name=".PickUserDataActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".SplashActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity
+            android:name=".PickDataActivity"
+            android:exported="true"
+            >
 
         </activity>
         <activity
-            android:name=".LoginActivity">
-        </activity>
-        <activity
-            android:name=".PickDataActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:screenOrientation="fullSensor"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -46,17 +55,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity
             android:name="com.microblink.blinkbarcode.activity.BarcodeScanActivity"
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"></activity>
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" />
         <activity
             android:name=".CustomUIScanActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
