combo box user data was created

--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -30,10 +30,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".PickUserDataActivity"
-            android:exported="false">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".SplashActivity"></activity>
         <activity android:name=".LoginActivity"></activity>
@@ -48,11 +54,7 @@
             android:screenOrientation="fullSensor"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.microblink.blinkbarcode.activity.BarcodeScanActivity"
