--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -38,7 +38,15 @@
 
         </activity>
         <activity android:name=".SplashActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".PickDataActivity"
             android:exported="true"
@@ -50,11 +58,7 @@
             android:screenOrientation="fullSensor"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.microblink.blinkbarcode.activity.BarcodeScanActivity"
