--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -37,9 +37,7 @@
                 android:value="" />
 
         </activity>
-        <activity android:name=".SplashActivity"></activity>
-        <activity android:name=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"
+        <activity android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,9 +45,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".PickDataActivity"
             android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"
             >
 
         </activity>
