--- a/pdf417MobiCustomUISample/.gitignore
+++ b/pdf417MobiCustomUISample/.gitignore
@@ -29,5 +29,6 @@ render.experimental.xml
 # Google Services (e.g. APIs or Firebase)
 google-services.json
 
-# Android Profiling
+android/
+
 *.hprof
