--- a/pdf417MobiCustomUISample/build.gradle
+++ b/pdf417MobiCustomUISample/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.android.support:design:29.0.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation 'com.kelin.translucentbar:library:0.8.0'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
 
 }
