--- a/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
+++ b/pdf417MobiCustomUISample/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <application
         android:name=".CustomUIDemoApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme">
@@ -46,7 +46,8 @@
         </activity>
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
